Fixed bug that undefined css classes are undefined; replaced data-attribute data-dropdown to data-neotabs-dropdown; introduced data-neotabs-active for pre-activating a tab

--- a/examples/basic-neotabs.html
+++ b/examples/basic-neotabs.html
@@ -42,7 +42,7 @@
         </div>
 
         <script src=../lib/jquery-1.8.2.js></script>
-        <script src=../src/jquery.neotabs.js></script>
+        <script src=../src/jquery.neotabs.min.js></script>
         <script>
           $('.tabs').neoTabs(/*{
             wrapperClass: 'content', // Classname of div to apply around the content
