--- a/examples/dropdown-neotabs.html
+++ b/examples/dropdown-neotabs.html
@@ -29,7 +29,7 @@
           </div>
 
           <div class=tabbody>
-            <h4 data-dropdown>Tabbody Heading 3</h4>
+            <h4 data-neotabs-dropdown>Tabbody Heading 3</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
