--- a/examples/pre-active-neotabs.html
+++ b/examples/pre-active-neotabs.html
@@ -23,13 +23,13 @@
           </div>
 
           <div class=tabbody>
-            <h4>Tabbody Heading 2</h4>
+            <h4 data-neotabs-active>Tabbody Heading 2</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
 
           <div class=tabbody>
-            <h4 data-neotabs-dropdown>Tabbody Heading 3</h4>
+            <h4>Tabbody Heading 3</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
