--- a/examples/dropdown-neotabs.html
+++ b/examples/dropdown-neotabs.html
@@ -41,7 +41,7 @@
           </div>
         </div>
 
-        <script src=../lib/jquery-1.8.2.js></script>
+        <script src=../components/jquery/jquery.js></script>
         <script src=../src/jquery.neotabs.js></script>
         <script>
           $('.tabs').neoTabs(/*{
