Extended pre-active-neotabs example; Added public API; Added nojs-example to test the public API over browser console

--- a/examples/pre-active-neotabs.html
+++ b/examples/pre-active-neotabs.html
@@ -42,6 +42,32 @@
           </div>
         </div>
 
+        <div class=tabs>
+          <div class=tabbody>
+            <h4>Tabbody Heading</h4>
+
+            <p>Lorem Ipsum</p>
+          </div>
+
+          <div class=tabbody>
+            <h4>Tabbody Heading 2</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+
+          <div class=tabbody>
+            <h4 data-neotabs-active>Tabbody Heading 3</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+
+          <div class=tabbody>
+            <h4>Tabbody Heading 4</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+        </div>
+
         <script src=../components/jquery/jquery.js></script>
         <script src=../src/jquery.neotabs.js></script>
         <script>
