Keyboard support! yay

--- a/examples/dropdown-neotabs.html
+++ b/examples/dropdown-neotabs.html
@@ -40,6 +40,21 @@
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
+          <div class=tabbody>
+            <h4>Tabbody Heading 5</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+          <div class=tabbody>
+            <h4>Tabbody Heading 6</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+          <div class=tabbody>
+            <h4>Tabbody Heading 7</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
         </div>
 
         <script src=../components/jquery/jquery.js></script>
