--- a/examples/basic-neotabs.html
+++ b/examples/basic-neotabs.html
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-        <script src=../components/jquery/jquery.js></script>
+        <script src=../components/jquery/jquery.min.js></script>
         <script src=../components/jquery.neotabs.js/dist/jquery.neotabs.min.js></script>
         <script>
           $('.tabs').neoTabs(/*{
