--- a/examples/performance.html
+++ b/examples/performance.html
@@ -18,7 +18,7 @@
 
         <div class=tabs>
           <div class=tabbody>
-            <h4>Tabbody Heading</h4>
+            <h4 data-neotabs-dropdown="true">Tabbody Heading</h4>
 
             <p>Lorem Ipsum</p>
           </div>
