Switched to a more function based approach

--- a/examples/performance.html
+++ b/examples/performance.html
@@ -18,7 +18,7 @@
 
         <div class=tabs>
           <div class=tabbody>
-            <h4 data-neotabs-dropdown="true">Tabbody Heading</h4>
+            <h4 data-neotabs-dropdown="true" class="foo bar bla baz">Tabbody Heading</h4>
 
             <p>Lorem Ipsum</p>
           </div>
@@ -30,7 +30,7 @@
           </div>
 
           <div class=tabbody>
-            <h4 data-neotabs-dropdown>Tabbody Heading 3</h4>
+            <h4>Tabbody Heading 3</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
