--- a/examples/basic-neotabs.html
+++ b/examples/basic-neotabs.html
@@ -24,7 +24,7 @@
           </div>
 
           <div class=tabbody>
-            <h4>Tabbody Heading 2</h4>
+            <h4 data-neotabs-dropdown>Tabbody Heading 2</h4>
 
             <p>Lorem Ipsum wakka wakka</p>
           </div>
