--- a/examples/nojs-neotabs.html
+++ b/examples/nojs-neotabs.html
@@ -42,6 +42,31 @@
           </div>
         </div>
 
+        <div id=tabs2>
+          <div class=tabbody>
+            <h4>Tabbody Heading</h4>
+
+            <p>Lorem Ipsum</p>
+          </div>
+
+          <div class=tabbody>
+            <h4>Tabbody Heading 2</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+
+          <div class=tabbody>
+            <h4>Tabbody Heading 3</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+
+          <div class=tabbody>
+            <h4>Tabbody Heading 4</h4>
+
+            <p>Lorem Ipsum wakka wakka</p>
+          </div>
+        </div>
         <script src=../components/jquery/jquery.js></script>
         <script src=../src/jquery.neotabs.js></script>
     </body>
